--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,6 @@ jobs:
     steps:
     - name: Checkout source tree
       uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
         
     - name: Lint with flake8
       run: |
@@ -23,10 +19,10 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Install basic packages that are required for tests
-      run: |
-        sudo apt-get update -y
-        sudo apt-get install -y python3-pip python3-setuptools libsystemd-dev
+#     - name: Install basic packages that are required for tests
+#       run: |
+#         sudo apt-get update -y
+#         sudo apt-get install -y python3-pip python3-setuptools libsystemd-dev
 
     - name: Install Dependencies
       run: |
