--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        pip install -r requirements-test.txt
+        pip install -r requirements.txt
 
     - name: Execute tests
       run: |
