--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       with:
         branch: master # The branch the action should deploy to.
         folder: csp-cwp-common/artifacts/coverage/ # The folder the action should deploy.
-
+        token: ${{ secrets.ACCESS_TOKEN }}
