--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,5 @@ jobs:
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
-        branch: master # The branch the action should deploy to.
+        branch: gcr_login # The branch the action should deploy to.
         folder: csp-cwp-common/artifacts/coverage/ # The folder the action should deploy.
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
